tests/baselines/reference/jsonParserRecovery/Two_objects.errors.txt
Two objects(1,4): error TS1012: Unexpected token.


==== Two objects (1 errors) ====
    {} {}
       ~
!!! error TS1012: Unexpected token.